Bug 127735 - FILESAVE DOCX Hyperlink does not work in Microsoft Word when the target is table
Summary: FILESAVE DOCX Hyperlink does not work in Microsoft Word when the target is table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Shapes DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-09-24 07:44 UTC by NISZ LibreOffice Team
Modified: 2019-09-30 12:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODT file from Writer. (8.66 KB, application/binary)
2019-09-24 07:46 UTC, NISZ LibreOffice Team
Details
The original file saved as DOCX. (13.85 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-24 07:47 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-24 07:44:55 UTC
Description:
Hyperlink with internal table target in DOCX documents created with Writer is broken when the document is opened in Word.

Steps to Reproduce:
    1. Create a document in LibreOffice.
    2. Insert a page break and a table.
    3. Click on the first page.
    4. Insert a hyperlink and set the table as the target of the hyperlink.
    5. Save the document in DOCX format.
    6. Open the file with Microsoft Word.
    7. Notice, that the hyperlink does not work.

Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work in Word.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 632ee9aae6d5f3cf08b6d6b2789310c20db713b7
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-09-24 07:46:57 UTC
Created attachment 154409 [details]
Example ODT file from Writer.
Comment 2 NISZ LibreOffice Team 2019-09-24 07:47:16 UTC
Created attachment 154410 [details]
The original file saved as DOCX.
Comment 3 Xisco Faulí 2019-09-25 15:29:51 UTC
patch in gerrit, moving it to ASSIGNED -> https://gerrit.libreoffice.org/#/c/79524/
Comment 4 Commit Notification 2019-09-30 11:02:24 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5d5ec2a1ffe3862cc9689e667cebf1f9c1a5f330

tdf#127735 DOCX export: fix internal hyperlinks to table target

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.