tdf#127735 DOCX export: fix internal hyperlinks to table target

Hyperlinks with internal table targets didn't work in Word.

Change-Id: I93b2b38d3d0196939f7aa5021811d2a9d5e482f5