sw/source/filter/ww8/wrtww8.cxx
@@ -3130,6 +3130,20 @@ void MSWordExportBase::AddLinkTarget(const OUString& rURL)
             }
         }
     }
+    else if( sCmp == "table" )
+    {
+        OUString aName(BookmarkToWriter(aURL.copy(0, nPos)));
+        const SwTable* pTmpTable = SwTable::FindTable(m_pDoc->FindTableFormatByName(aName));
+        if (pTmpTable)
+        {
+            SwTableNode* pTableNode = const_cast<SwTableNode*>(pTmpTable->GetTabSortBoxes()[1]->GetSttNd()->FindTableNode());
+            if (pTableNode)
+            {
+                nIdx = pTableNode->GetIndex() + 2;
+                noBookmark = true;
+            }
+        }
+    }
     if (noBookmark)
     {
         aBookmarkPair aImplicitBookmark;
